--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Josefin+Slab|Jura:600|Marck+Script|Poiret+One|Proza+Libre" rel="stylesheet">
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/layout.css" media="screen" />
 </head>
 <body id="myPage">
 <!-- Nav  -->
