--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Josefin+Slab|Jura:600|Marck+Script|Poiret+One|Proza+Libre" rel="stylesheet">
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+ 
+  <link rel="stylesheet" media="screen" href="https://production-assets.codepen.io/assets/fullpage/fullpage-1f309c2de118fa1ef0f114eb622eeac6074c3682f0129b8fca69240b89ce666f.css" />
   <link rel="stylesheet" href="styles/layout.css" media="screen" />
 </head>
 <body id="myPage">
